# biCat

./: .gitignore  README.md  README_en.md
MacOS/aarch64/: bicat
MacOS/x86/: bicat
biCat/: package-lock.json  package.json  vite.config.ts
biCat/src-tauri/: tauri.conf.json
bicat/: Cargo.toml  audio_url.py
bicat/src/: error.rs  main.rs
installation_script/: install_bicat.ps1  install_bicat.sh
